/**
 * Created by Jithu Thomas on 14/6/18.
 */
syntax = "proto3";

option java_multiple_files = true;
option java_package = "sapphire.kernel";

package kernel;

// The request message containing the required parameters.
message Kernel_CreateRequest {
    string name = 1;
}

// The response message containing the required parameters.
message Kernel_CreateReply {
    string ObjId = 1;
}

// The request message containing the required parameters.
message Kernel_DeleteRequest {
    string ObjId = 1;
}

// The response message containing the required parameters.
message Kernel_DeleteReply {
    bool flag = 1;
}

// The request message containing the required parameters.
message Kernel_GenericMethodRequest {
    string ObjId = 1;
    string sapphireObjName = 2;
    string funcName = 3;
    bytes params = 4;
    //repeated string paramNames=5;
    repeated string dmsList=6;
}

// The response message containing the required parameters.
message Kernel_GenericMethodReply {
    //repeated bytes ret = 1;
    bytes ret = 1;
}

service Kernel_MgmtgrpcService {
    rpc Kernel_CreateSapphireObject( Kernel_CreateRequest ) returns (Kernel_CreateReply ){}
    rpc Kernel_DeleteSapphireObject( Kernel_DeleteRequest ) returns (Kernel_DeleteReply) {}
    rpc Kernel_GenericMethodInvoke( Kernel_GenericMethodRequest ) returns (Kernel_GenericMethodReply){}
}
